<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">frontlib</string>
    <string name="stringNotData">No data</string>
    <string name="stringNode">Lesson:&#160;</string>
    <string name="stringIntroduceTitle">Preface</string>
    <string name="stringHearingTitle">What did you hear?</string>
    <string name="stringLabelHearingTitle">Click what you hear:</string>
    <string name="stringLabelTranslateTitle">Please translate the following sentences:</string>
    <string name="stringAnswerNode">Light up all the stars to unlock the next module and get the \"%s\" award. Keep going!</string>
    <string name="stringAnswerNodeOfFastLearning">You have completed this section. keep going!</string>
    <string name="stringAnswerNodeCompletedOfFastLearning">You have completed the exercises of this module, to unlock more modules  and earn more rewards.</string>
    <string name="stringAnswerEnd">Good job! Congratulations on winning a lightning and successfully unlocking the next module. Keep going!</string>
    <string name="stringAnswerExpNormal">Section completed!</string>
    <string name="stringAnswerExpFast">Module completed!</string>
    <string name="stringFastReviewEnd">You have finished one stage of review, keep going to remember more word!</string>
    <string name="stringIntroduceEnd">Now that you know pinyin and Chinese characters, go to learn more Chinese.</string>
    <string name="stringSkipTestEnd">You have successfully passed the test and won a lightning award. Start learning new modules right now!</string>
    <string name="stringTestEndFailure">Unfortunately, you are not passing exam(practice/test). Keep practicing!</string>
    <string name="stringTestFailureIconTitle">Oops, Challenge failed</string>
    <string name="stringTestFailureTitle">Your latest score is %s</string>
    <string name="stringTestFailureContent">Your historical maximum score is %s</string>
    <string name="stringTestSuccessIconTitle">Awesome! Challenge successful</string>
    <string name="stringTestSuccessTitle">Your maximum score is %s</string>
    <string name="stringTestSuccessContent">Your historical score is %s, and the highest score has been reserved for you!</string>
    <string name="stringTestFlatIconTitle">Equal score</string>
    <string name="stringTestFlatTitle">Your latest score is %s</string>
    <string name="stringTestFlatContent">Your highest historical score is %s</string>
    <string name="stringTestPassIconTitle">Wow..You passed test</string>
    <string name="stringTestPassTitle">Your score is %s</string>
    <string name="stringTestPassContent">You can do this better, come and challenge higher score now!</string>
    <string name="stringTestNotPassIconTitle">Oops, you failed test</string>
    <string name="stringTestNotPassTitle">Your score is %s</string>
    <string name="stringTestNotPassContent">Get %s score to pass the test, come and try again!</string>
    <string name="stringTestBeforeFullMarksIconTitle">Oops, you failed test</string>
    <string name="stringTestBeforeFullMarksTitle">Your score is %s</string>
    <string name="stringTestBeforeFullMarksContent">Get %s score to pass the test, come and try again!</string>
    <string name="stringTestTryAgain">TRY AGAIN</string>
    <string name="stringTestGoBackBtn">FORGET IT</string>
    <string name="stringSkipTestLightningConsumeContent">Pass the exam to skip the exercises，and unlock the next module directly! Remind you to keep less than 3 mistakes.</string>
    <string name="stringTestCheer">Make persistent efforts! Come on!</string>
    <string name="stringLockTipsContentOfNotVip">Complete above modules to unlock test</string>
    <string name="stringLockTipsContentOfVip">You will challenge all of above knowledge point, hint to you this is not easy.</string>
    <string name="stringLockTipsBtnOfNotVip">START IMMEDIATELY</string>
    <string name="stringLockTipsBtnOfVip">START</string>
    <string name="stringModelKeepLeaning">%s keep leaning</string>
    <string name="stringOr">Or</string>
    <string name="stringUseStartTest">USE 4 %s START TEST</string>
    <string name="stringEncourage">It\'s OK to make mistakes, keep practicing! Don\'t give up!</string>
    <string name="stringEndTitle">Congratulations!</string>
    <string name="stringReViewEndTitle">Well done!</string>
    <string name="stringTouchStartRecording">Click on the start of recording</string>
    <string name="stringTouchStopRecording">Click on the end of recording</string>
    <string name="stringStartAnswer">START</string>
    <string name="stringSkipAnswer">SKIP TEST</string>
    <string name="stringStartAnswerComplete">DAILY PRACTICE</string>
    <string name="stringSkipAnswerComplete">QUICK LEARNING</string>
    <string name="stringFastReView">Quick review</string>
    <string name="stringWrongQuestionSet">Mistake list</string>
    <string name="stringWordsList">Glossary</string>
    <string name="stringStartTest">START TEST</string>
    <string name="stringCancelTest">CANCEL TEST</string>
    <string name="stringTestEnable">TEST OUT</string>
    <string name="stringTestDisable">PASSED</string>
    <string name="stringUpgradeBtn">Upgrade</string>
    <string name="stringReviewBtn">Review</string>
    <string name="stringNextQuestionBtn">NEXT QUESTION</string>
    <string name="stringFastReviewNotCourses">There are no courses to review, go study!</string>
    <string name="stringSearchNotList">There is no such word!</string>
    <string name="stringWrongQuestionSetLastTips">This is the last question!</string>
    <string name="stringWrongQuestionSetNotData">No more question set</string>
    <string name="stringWrongQuestionSetDaoTips">Wrong questions will be automatically added to the list, can be checked at anytime in the review – list</string>
    <string name="stringAnswerExpTitle">You earned %sXP today.</string>
    <string name="stringAnswerExpContentOfNormal">Section completed!</string>
    <string name="stringAnswerExpContentOfSkip">Module completed!</string>
    <string name="stringAnswerExpContentOfTestOut">Test out completed!</string>
    <string name="stringFrontTestButtonText">TEST</string>
    <string name="stringAnswerTestRefreshScoreOfTitle">Current achievement</string>
    <string name="stringAnswerTestRefreshScoreOfLackLightningTips">Use 2 %s to challenge higher score!</string>
    <string name="stringAnswerTestRefreshScoreOfLackLightningOfVipTips">Only VIP members can refresh the record!</string>
    <string name="stringAnswerTestRefreshScoreOfRefreshBtn">REFRESH THE RECORD</string>
    <string name="stringRefreshScoreLackLightningOfTitle">Oops, out of energy</string>
    <string name="stringRefreshScoreLackLightningOfRedeemBtn">TO REDEEM</string>
    <string name="stringRefreshScoreLackLightningOfPracticeBtn">TO PRACTICE</string>
    <string name="stringAnswerExpContentOfFastReview">That \'s great! You have completed a stage of review, keep going to memorize more vocabularies.</string>
    <string name="hintSearch">Search</string>
</resources>