<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_horizontal">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/ic_refresh_score_lack_lightning_icon"
        android:drawablePadding="22dp"
        android:text="@string/stringRefreshScoreLackLightningOfTitle"
        android:textSize="19sp"
        android:textColor="@color/color33"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/answer_test_refresh_score_tv_to_redeem_btn"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/stringRefreshScoreLackLightningOfRedeemBtn"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:background="@drawable/ic_touch_btn_true"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:clickable="true"/>

    <TextView
        android:id="@+id/answer_test_refresh_score_tv_to_practice_btn"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:text="@string/stringRefreshScoreLackLightningOfPracticeBtn"
        android:textSize="20sp"
        android:textColor="@color/colorMain"
        android:textStyle="bold"
        android:background="@drawable/ic_touch_skip_btn"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:layout_marginBottom="20dp"
        android:focusable="true"
        android:clickable="true"/>

</LinearLayout>